--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -145,7 +145,9 @@
         "045.h": "c",
         "010.h": "c",
         "cmsis_os2.h": "c",
-        "dap_config.h": "c"
+        "dap_config.h": "c",
+        "debug_cm.h": "c",
+        "dap.h": "c"
     },
     "files.autoGuessEncoding": true,
     "C_Cpp.default.configurationProvider": "iarsystems.iar-build"
