整理编程算法

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -150,7 +150,8 @@
         "dap.h": "c",
         "burnerconfig.h": "c",
         "cjson.h": "c",
-        "swd_opt.h": "c"
+        "swd_opt.h": "c",
+        "flash_blob.h": "c"
     },
     "files.autoGuessEncoding": true,
     "C_Cpp.default.configurationProvider": "iarsystems.iar-build"
