基础功能完成

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -151,7 +151,9 @@
         "burnerconfig.h": "c",
         "cjson.h": "c",
         "swd_opt.h": "c",
-        "flash_blob.h": "c"
+        "flash_blob.h": "c",
+        "swd_host.h": "c",
+        "task_burner.h": "c"
     },
     "files.autoGuessEncoding": true,
     "C_Cpp.default.configurationProvider": "iarsystems.iar-build"
