完善烧录算法

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -153,7 +153,8 @@
         "swd_opt.h": "c",
         "flash_blob.h": "c",
         "swd_host.h": "c",
-        "task_burner.h": "c"
+        "task_burner.h": "c",
+        "task_beep.h": "c"
     },
     "files.autoGuessEncoding": true,
     "C_Cpp.default.configurationProvider": "iarsystems.iar-build"
