增加编程地址设定

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -155,7 +155,8 @@
         "swd_host.h": "c",
         "task_burner.h": "c",
         "task_beep.h": "c",
-        "usb_lib.h": "c"
+        "usb_lib.h": "c",
+        "heap.h": "c"
     },
     "files.autoGuessEncoding": true,
     "C_Cpp.default.configurationProvider": "iarsystems.iar-build"
