--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -156,7 +156,8 @@
         "task_burner.h": "c",
         "task_beep.h": "c",
         "usb_lib.h": "c",
-        "heap.h": "c"
+        "heap.h": "c",
+        "float.h": "c"
     },
     "files.autoGuessEncoding": true,
     "C_Cpp.default.configurationProvider": "iarsystems.iar-build"
